# minidex

./: .gitignore  Cargo.toml  README.md
bench/: Cargo.toml
bench/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
examples/fs-index/: Cargo.toml
examples/fs-index/src/: main.rs
minidex/: Cargo.toml
minidex/benches/: minidex_bench.rs
minidex/src/: #segmented_index.rs#  collector.rs  common.rs  entry.rs  lib.rs  opstamp.rs  payload.rs  search.rs  segmented_index.rs  tokenizer.rs  wal.rs
minidex/src/search/: scoring.rs
minidex/src/segmented_index/: compactor.rs
