[package]
name = "minidex-cli"
description = "TUI for minidex"
version = "0.2.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[dependencies]
minidex = { path = "../minidex", version = "*" }
ratatui = "0.30.0"
crossterm = { version = "0.28.1" }
anyhow = "1.0.96"
ignore = "0.4.25"
