[package]
name = "minidex"
description = "A lightweight indexing engine for filesystem entries"
version = "0.10.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[dependencies]
fst = "0.4.7"
fs4 = "0.13"
memmap2 = "0.9.9"
regex-automata = { version = "0.4.13", default-features = false, features = ["unicode", "perf", "dfa-build", "dfa-search", "syntax"] }
regex-syntax = "0.8.8"
thiserror = "2.0.17"
log = "0.4.29"
bstr = "1.12.1"
unicode-normalization = "0.1.25"
